# ChangeLog for dev-libs/ucommon
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/ucommon/ChangeLog,v 1.14 2012/11/26 18:05:54 maksbotan Exp $

*ucommon-5.5.0 (26 Nov 2012)
*ucommon-6.0.0 (26 Nov 2012)

  26 Nov 2012; Maxim Koltsov <maksbotan@gentoo.org>
  +files/gcrypt_autotools.patch, +files/install_gcrypt.m4_file.patch,
  +ucommon-5.5.0.ebuild, +ucommon-6.0.0.ebuild:
  Bump to 5.5.0 and 6.0.0, thanks to slepnoga

  22 Nov 2012; Agostino Sarubbo <ago@gentoo.org> ucommon-5.2.2-r3.ebuild:
  Stable for x86, tested by Vincent Olivert Riera <peratu@carrosses.com>, wrt
  bug #438284

  02 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> ucommon-5.2.2-r3.ebuild:
  Add workaround for USE="gnutls" dependencies by locking it on gnutls[-nettle]

  25 Oct 2012; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml,
  ucommon-5.2.2-r3.ebuild:
  QA: fix handling of ssl/gnutls USE flags that were completely broken.

  22 Oct 2012; Agostino Sarubbo <ago@gentoo.org> ucommon-5.2.2-r3.ebuild:
  Stable for AMD64, wrt bug #438284

  21 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> ucommon-5.2.2-r3.ebuild:
  Fix for bug #438354, thanks to Anthony Basile

  16 Oct 2012; Anthony G. Basile <blueness@gentoo.org> ucommon-5.2.2-r3.ebuild:
  stable ppc ppc64, bug #438284

  29 Sep 2012; Anthony G. Basile <blueness@gentoo.org> ucommon-5.2.2-r3.ebuild:
  keyword ~ppc ~ppc64, bug #435992

*ucommon-5.2.2-r3 (20 Aug 2012)

  20 Aug 2012; Alexander Vershilov <qnikst@gentoo.org>
  -ucommon-5.2.2-r2.ebuild, +ucommon-5.2.2-r3.ebuild,
  files/ucommon-5.2.2-address.patch:
  ucommon-5.2.2 patch fixed

*ucommon-5.2.2-r2 (20 Aug 2012)

  20 Aug 2012; Alexander Vershilov <qnikst@gentoo.org>
  -ucommon-5.2.2-r1.ebuild, +ucommon-5.2.2-r2.ebuild,
  +files/ucommon-5.2.2-address.patch:
  fixed bug 423941, patch by David Sugar, thanks to slepnoga

*ucommon-5.2.2-r1 (14 Jun 2012)
